Java 9: Replace 'new Integer' with 'Integer.valueOf'