@@ -266,10 +266,10 @@ public class DomV20ClientsBuilder {
                         abortondocumenterror = Boolean.valueOf(childval);
                         break;
                     case "maxpendingdocs":
-                        maxpendingdocs = new Integer(childval);
+                        maxpendingdocs = Integer.valueOf(childval);
                         break;
                     case "maxpendingbytes":
-                        maxpendingbytes = new Integer(childval);
+                        maxpendingbytes = Integer.valueOf(childval);
                         break;
                     case "retryenabled":
                         retryenabled = Boolean.valueOf(childval);
@@ -284,10 +284,10 @@ public class DomV20ClientsBuilder {
                         route = childval;
                         break;
                     case "tracelevel":
-                        tracelevel = new Integer(childval);
+                        tracelevel = Integer.valueOf(childval);
                         break;
                     case "mbusport":
-                        mbusport = new Integer(childval);
+                        mbusport = Integer.valueOf(childval);
                         break;
                     case "docprocchain":
                         docprocChain = childval;
