@@ -131,7 +131,7 @@ public class DocumentPathUpdateTestCase {
         docUp.applyTo(doc);
         assertEquals(1, ((WeightedSet) doc.getFieldValue("strwset")).size());
         WeightedSet docWset = (WeightedSet) doc.getFieldValue("strwset");
-        assertEquals(new Integer(10), docWset.get(new StringFieldValue("hello hello")));
+        assertEquals(Integer.valueOf(10), docWset.get(new StringFieldValue("hello hello")));
     }
 
     @Test
@@ -240,8 +240,8 @@ public class DocumentPathUpdateTestCase {
         docUp.applyTo(doc);
         assertEquals(2, ((WeightedSet) doc.getFieldValue("strwset")).size());
         WeightedSet docWset = (WeightedSet) doc.getFieldValue("strwset");
-        assertEquals(new Integer(5), docWset.get(new StringFieldValue("assigned val 0")));
-        assertEquals(new Integer(10), docWset.get(new StringFieldValue("assigned val 1")));
+        assertEquals(Integer.valueOf(5), docWset.get(new StringFieldValue("assigned val 0")));
+        assertEquals(Integer.valueOf(10), docWset.get(new StringFieldValue("assigned val 1")));
     }
 
     @Test
@@ -260,7 +260,7 @@ public class DocumentPathUpdateTestCase {
         docUp.applyTo(doc);
         WeightedSet docWset = (WeightedSet) doc.getFieldValue(doc.getField("strwset"));
         assertEquals(1, docWset.size());
-        assertEquals(new Integer(243), docWset.get(new StringFieldValue("blahdi blahdi")));
+        assertEquals(Integer.valueOf(243), docWset.get(new StringFieldValue("blahdi blahdi")));
     }
 
     @Test
